apps/web/envs/dev/replicas.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visign-web
spec:
  replicas: 1
