apps/web/envs/dev/version.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visign-web
spec:
  template:
    spec:
      containers:
        - name: visign-web
          image: visignnonprodacrzse7xf.azurecr.io/visign-web:dev-817602b7d53f9cfcd311964bcc9def9e83b4cbcf
