apps/web/envs/dev/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visign-ingress
spec:
  tls:
    - hosts:
        - dev.lyhua.dpdns.org
      secretName: visign-tls-dev
  rules:
    - host: dev.lyhua.dpdns.org
      http:
        paths:
          - path: /api/predict
            pathType: Prefix
            backend:
              service:
                name: visign-ai
                port:
                  number: 8000
          - path: /api/videos
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visign-web
                port:
                  number: 3000
